# TestPilot-AI

./: .env.example  .gitignore  Makefile  PROJECT_OVERVIEW.md  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2c5589a68ebf_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/agents/: dependency_agent.py  diff_agent.py  documentation_agent.py  execution_agent.py  failure_analysis_agent.py  graph.py  impact_agent.py  planner_agent.py  review_agent.py  search_agent.py  state.py  test_discovery_agent.py  test_generator_agent.py
backend/app/api/: deps.py  websocket.py
backend/app/api/v1/: ai.py  auth.py  dashboard.py  pull_requests.py  repositories.py  router.py  tests.py  users.py  webhooks.py
backend/app/core/: config.py  logging.py  security.py  telemetry.py
backend/app/database/: __init__.py  base.py  base_class.py  session.py
backend/app/middleware/: rate_limit.py  request_id.py
backend/app/models/: __init__.py  agent_run.py  ai_log.py  base.py  bug_history.py  commit.py  dependency_graph.py  generated_test.py  pull_request.py  repository.py  repository_file.py  review_comment.py  test_result.py  test_run.py  user.py
backend/app/repositories/: __init__.py  base.py  base_repo.py  pull_request_repo.py  repository_repo.py  test_run_repo.py  user_repository.py
backend/app/schemas/: agent.py  ai.py  common.py  pull_request.py  repository.py  test.py  user.py
backend/app/services/: ast_parser.py  dependency_graph_builder.py  embedding_service.py  github_service.py  impact_analyzer.py  repository_indexer.py  risk_scorer.py  test_discovery.py  test_runner.py
backend/app/tasks/: indexing.py  notifications.py  pr_pipeline.py
backend/app/utils/: git_utils.py  qdrant_client.py  tree_sitter_utils.py
backend/app/workers/: celery_app.py
backend/tests/: conftest.py
backend/tests/test_api/: test_repositories.py  test_webhooks.py
backend/tests/test_services/: test_ast_parser.py  test_github_service.py
docs/: ARCHITECTURE_AND_METRICS.md  FUTURE_MONITORING_PLAN.md  GITHUB_APP_SETUP.md  IMPLEMENTATION_HISTORY.md  IMPLEMENTATION_HISTORY_COMPLETE.md  IMPLEMENTATION_HISTORY_PHASE4.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE4.md  IMPLEMENTATION_PLAN_PHASE4_V2.md  TASK_LIST_V2.md  architecture.md  setup.md
frontend/: .dockerignore  Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/monitoring/: page.tsx
frontend/src/app/pull-requests/: page.tsx
frontend/src/app/pull-requests/[id]/: page.tsx
frontend/src/app/repositories/: page.tsx
frontend/src/app/repositories/[id]/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Logo.tsx  Sidebar.tsx
frontend/src/lib/api/: ai.ts  auth.ts  client.ts  dashboard.ts  pullRequests.ts  repositories.ts  tests.ts  users.ts
infra/grafana/dashboards/: testpilot.json
infra/grafana/provisioning/dashboards/: provider.yml
infra/nginx/: nginx.conf
infra/otel/: otel-collector.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
